fix layout issue

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -4,13 +4,8 @@ html {
   font-size: 15px;
 }
 
-.wrapper {
-  height: 100%;
-}
-
 .content-wrapper {
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
   padding-top: 100px;
   padding-left: 250px;
   transition: padding-left 0.3s ease-in-out;
